--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,11 +13,12 @@
 			padding: 0;
 		}
 		.country:hover {
-			fill: red;
+			fill: #000000;
+			opacity : 1 !important;
 		}
 
 		.country {
-			fill: lightgreen;
+			/*fill: lightgreen;*/
 			stroke: black;
 			stroke-width: 0.05px;
 		}
@@ -30,80 +31,136 @@
 <body>
 	<h1 id="title">메인 페이지</h1>
 	<hr>
-	<a sec:authorize="isAuthenticated()" th:href="@{/logout}">로그아웃</a>
-	<a sec:authorize="isAnonymous()" th:href="@{/signUp}">회원가입</a>
-	<a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/user/main}">내정보</a>
-	<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}">어드민</a>
-	<input type="hidden" id="cnt" name="cnt" onchange="setGpath()">
+<!--	<a sec:authorize="isAuthenticated()" th:href="@{/logout}">로그아웃</a>-->
+<!--	<a sec:authorize="isAnonymous()" th:href="@{/signUp}">회원가입</a>-->
+<!--	<a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/user/main}">내정보</a>-->
+<!--	<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}">어드민</a>-->
 	<h2 id="current"></h2>
-	<div>
+	<table>
+		<tr>
+			<td>
+				<div style="width: 900px;height: 832px">
 
-	</div>
+				</div>
+			</td>
+		</tr>
+	</table>
 </body>
 <script>
 	var cnt = 0;
-	var countries
-	var countryList
-	const svg = d3.select('div').append('svg').attr('width', 1440).attr('height', 900);
-	const g = svg.append('g');
-	const colorScale = d3.scaleOrdinal(d3.schemeCategory10);
-	const projection = d3.geoNaturalEarth1();
-	const pathGenerator = d3.geoPath().projection(projection);
-	var countries;
+	var current = d3.select('#current')
 
-	svg.call(
-		d3.zoom().on('zoom', function() {
-			g.attr('transform', d3.zoomTransform(this));
-		})
-	);
+	/** 국가 조회 */
+	function loadData(cb){
+		d3.json('https://cdn.jsdelivr.net/npm/world-atlas@2/countries-110m.json', function(data){
+			/** 국가 이름 한글 조회 */
+			d3.tsv('/other/tsv/world-country-names.tsv', function(error, a) {
+				if (error) throw error
+				cb(data, a)
+			})
 
-	d3.json('https://cdn.jsdelivr.net/npm/world-atlas@2/countries-50m.json', function(data){
-		console.log(data)
-		// Convert topoJSON to geoJSON
-		if(cnt == 0){
-			countries = topojson.feature(data, data.objects.countries)
-
-			cnt++;
-			setGpath();
-		}
-			// svg
-			// 	.selectAll('path')
-			// 	.data(countries.features)
-			// 	.enter()
-			// 	.append('path')
-			// 	.attr('class', 'country')
-			// 	.attr('d', pathGenerator)
-			// 	.append('title') // (*)
-			// 	.text(d => d.properties.name);
-
-			// Join data and draw svg path
-
-	});
-
-
-	function setGpath(){
-		g.append('path')
-				.attr('class', 'sphere')
-				.attr('d', pathGenerator({ type: 'Sphere' }))
-
-		g.selectAll('path')
-			.data(countries.features)
-			.enter()
-			.append('path')
-			.attr('class', 'country')
-			.attr('d', pathGenerator)
-			.append('title') // Add a tooltop
-			.text(function(d){ return d.properties.name});
-
-		setGpathFill();
+			if(cnt == 0){
+				countries = topojson.feature(data, data.objects.countries)
+				cnt++;
+				setGpath();
+			}
+		});
 	}
 
-	function setGpathFill(){
-		for(var i = 0; i < g.selectAll('path')._groups[0].length; i++){
-			if(g.selectAll('path')._groups[0][i].classList.value != "sphere"){
-				g.selectAll('path')._groups[0][i].style.fill = colorScale(g.selectAll('path')._groups[0][i].__data__.properties.name);
+	/** svg 태그로 그리기 */
+	function setGpath(){
+		let width = d3.select("div").node().getBoundingClientRect().width
+		let height = 832
+		const sensitivity = 75
+
+		let projection = d3.geoOrthographic()
+			.scale(410)
+			.center([0, 0])
+			.rotate([0,-30])
+			.translate([width / 2, height / 2])
+
+		const initialScale = projection.scale()
+		let path = d3.geoPath().projection(projection)
+
+		let svg = d3.select("div")
+			.append("svg")
+			.attr("width", width)
+			.attr("height", height)
+
+		let globe = svg.append("circle")
+			.attr("fill", "#00008BFF")
+			.attr("stroke", "#000")
+			.attr("stroke-width", "0.2")
+			.attr("cx", width/2)
+			.attr("cy", height/2)
+			.attr("r", initialScale)
+
+		svg.call(d3.drag().on('drag', () => {
+			const rotate = projection.rotate()
+			const k = sensitivity / projection.scale()
+			projection.rotate([
+				rotate[0] + d3.event.dx * k,
+				rotate[1] - d3.event.dy * k
+			])
+			path = d3.geoPath().projection(projection)
+			svg.selectAll("path").attr("d", path)
+		})).call(d3.zoom().on('zoom', () => {
+			if(d3.event.transform.k > 0.3) {
+				projection.scale(initialScale * d3.event.transform.k)
+				path = d3.geoPath().projection(projection)
+				svg.selectAll("path").attr("d", path)
+				globe.attr("r", projection.scale())
 			}
-		}
+			else {
+				d3.event.transform.k = 0.3
+			}
+		}))
+
+		let map = svg.append("g")
+		let data = countries
+		map.append("g")
+			.attr("class", "countries" )
+			.selectAll("path")
+			.data(data.features)
+			.enter().append("path")
+			.attr("class", d => "country_" + d.properties.name.replace(" ","_"))
+			.attr("class", "country")
+			.attr("d", path)
+			.attr("fill", "white")
+			.style('stroke', 'black')
+			.style('stroke-width', 0.3)
+			.style("opacity",0.8)
+			.on("mouseover", function (d) {
+				enter(d)
+			})
+			.append('title')
+			.text(d => d.properties.name)
+
+		/** 자동 회전 */
+		// d3.timer(function(elapsed) {
+		// 	const rotate = projection.rotate()
+		// 	const k = sensitivity / projection.scale()
+		// 	projection.rotate([
+		// 		rotate[0] - 1 * k,
+		// 		rotate[1]
+		// 	])
+		// 	path = d3.geoPath().projection(projection)
+		// 	svg.selectAll("path").attr("d", path)
+		// },200)
+	}
+
+	/** 국가 조회 */
+	loadData(function(world, cList) {
+		countries = topojson.feature(world, world.objects.countries)
+		countryList = cList
+	})
+
+	/** 나라이름 출력 */
+	function enter(country) {
+		var country = countryList.find(function(c) {
+			return parseInt(c.id, 10) === parseInt(country.id, 10)
+		})
+		current.text(country && country.name || '')
 	}
 </script>
 </html>
