--- a/src/main/resources/static/css/earth.css
+++ b/src/main/resources/static/css/earth.css
@@ -24,7 +24,14 @@
 html, body {
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
+
+#canvas{
+    position: absolute;
+    z-index: -9999;
+}
+
 .country:hover, .dosi_over {
     fill: #000000;
     opacity : 1 !important;
@@ -44,7 +51,9 @@ html, body {
 }
 
 #earth_tb_dv{
-    width: 850px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
 #current{
