--- a/src/main/resources/templates/map/earth.html
+++ b/src/main/resources/templates/map/earth.html
@@ -8,27 +8,31 @@
 	<script src="/js/versor.js"></script>
 	<link th:href="@{/css/earth.css}" rel="stylesheet">
 </head>
-<body>
-	<a sec:authorize="isAnonymous()" th:href="@{/map/korea}">한국</a>
-	<div id="earth_dv">
-		<table id="earth_tb">
-			<colgroup>
-				<col width="44%">
-			</colgroup>
-			<tr>
-				<td class="text_top">
-					<div id="earth_tb_dv">
+<body id="earth_body">
+	<a sec:authorize="isAnonymous()" th:href="@{/map/south_korea}" style="position: absolute;color: red;">한국</a>
+	<canvas id="canvas"></canvas>
+	<div id="earth_tb_dv">
 
-					</div>
-				</td>
-				<td class="text_top">
-					<div style="border: 1px" id="pic">
-						<h2 id="current"></h2>
-					</div>
-				</td>
-			</tr>
-		</table>
 	</div>
+
+<!--	<div id="earth_dv">-->
+<!--		<table id="earth_tb">-->
+<!--			<colgroup>-->
+<!--				<col width="44%">-->
+<!--			</colgroup>-->
+<!--			<tr>-->
+<!--				<td class="text_top">-->
+
+<!--				</td>-->
+<!--				<td class="text_top">-->
+<!--					<div style="border: 1px" id="pic">-->
+<!--						<h2 id="current"></h2>-->
+<!--					</div>-->
+<!--				</td>-->
+<!--			</tr>-->
+<!--		</table>-->
+<!--	</div>-->
 </body>
 <script src="/js/home/earth.js"></script>
+<script src="/js/home/universe.js"></script>
 </html>
