--- a/src/main/resources/static/css/earth.css
+++ b/src/main/resources/static/css/earth.css
@@ -54,6 +54,8 @@ html, body {
     width: 100%;
     height: 100%;
     text-align: center;
+    position: absolute;
+    z-index: 9999;
 }
 
 #current{
