--- a/src/main/resources/templates/map/earth.html
+++ b/src/main/resources/templates/map/earth.html
@@ -3,15 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Map Hi</title>
+	<script type="text/javascript" src="/js/kendo/jquery-3.4.1.min.js?"></script>
 	<script src="/js/d3.v4.min.js"></script>
+	<script src="/js/three/three.min.js"></script>
 	<script src="/js/topojson-client.js"></script>
 	<script src="/js/versor.js"></script>
+	<script src="/js/three/three.min.js"></script>
+	<script src="/js/three/OrbitControls.min.js"></script>
+	<script src="/js/three/dat.min.js"></script>
 	<link th:href="@{/css/earth.css}" rel="stylesheet">
 </head>
 <body id="earth_body">
 	<a sec:authorize="isAnonymous()" th:href="@{/map/south_korea}" style="position: absolute;color: red;">한국</a>
-	<canvas id="canvas"></canvas>
-	<div id="earth_tb_dv">
+	<div id="earth_tb_dv" style="display: none">
 
 	</div>
 
