--- a/src/main/resources/templates/map/earth.html
+++ b/src/main/resources/templates/map/earth.html
@@ -15,7 +15,7 @@
 </head>
 <body id="earth_body">
 	<a sec:authorize="isAnonymous()" th:href="@{/map/south_korea}" style="position: absolute;color: red;">한국</a>
-	<div id="earth_tb_dv" style="display: none">
+	<div id="earth_tb_dv">
 
 	</div>
 
@@ -39,4 +39,7 @@
 </body>
 <script src="/js/home/earth.js"></script>
 <script src="/js/home/universe.js"></script>
+<script>
+
+</script>
 </html>
