--- a/src/main/resources/templates/map/south_korea.html
+++ b/src/main/resources/templates/map/south_korea.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="/js/d3.v4.min.js"></script>
-    <script src="/js/topojson-client.js"></script>
-    <script src="/js/versor.js"></script>
-    <link th:href="@{/css/earth.css}" rel="stylesheet">
-</head>
-<body>
-<a sec:authorize="isAnonymous()" th:href="@{/map/earth}">세계지도</a>
-    <div id="earth_dv">
-        <table id="earth_tb">
-            <colgroup>
-                <col width="44%">
-            </colgroup>
-            <tr>
-                <td class="text_top">
-                    <div id="earth_tb_dv">
+<html lang="en"
+        xmlns:sec="http://www.w3.org/1999/xhtml"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{fragments/layout}">
+    <th:block layout:fragment="content">
+        <th:block layout:fragment="css">
+            <link th:href="@{/css/earth.css}" rel="stylesheet">
+        </th:block>
 
-                    </div>
-                </td>
-                <td class="text_top">
-                    <div style="border: 1px" id="pic">
-                        <h2 id="current"></h2>
-                    </div>
-                </td>
-            </tr>
-        </table>
-    </div>
-</body>
-<script src="/js/home/map/south_korea.js"></script>
+        <!-- /.container-fluid -->
+        <a sec:authorize="isAnonymous()" th:href="@{/map/earth}">세계지도</a>
+        <div id="earth_dv">
+            <table id="earth_tb">
+                <colgroup>
+                    <col width="44%">
+                </colgroup>
+                <tr>
+                    <td class="text_top">
+                        <div id="earth_tb_dv">
+
+                        </div>
+                    </td>
+                    <td class="text_top">
+                        <div style="border: 1px" id="pic">
+                            <h2 id="current"></h2>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <!-- /.container-fluid -->
+
+        <th:block layout:fragment="script">
+            <script th:src="@{/js/home/map/south_korea.js}"></script>
+        </th:block>
+
+    </th:block>
+
 </html>
